optimizations and better code organization
- removed unused plugins
- reparented player character to pawn for less class overhead
- disconnected shortcut nodes in command registry TODO: NEEDS FIXING

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -208,6 +208,7 @@ FontDPI=72
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/PiozaGameLauncher")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/PiozaGameLauncher")
 bAllowMultiThreadedAnimationUpdate=False
+bSubtitlesEnabled=False
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -389,4 +390,16 @@ SpatializationPlugin=Built-in Spatialization
 bDisableActiveActors=True
 bDisableKinematicStaticPairs=True
 bDisableKinematicKinematicPairs=True
+
+[/Script/AIModule.AISystem]
+PerceptionSystemClassName=None
+
+[/Script/NavigationSystem.RecastNavMesh]
+NavLinkJumpDownConfig=(bEnabled=True,JumpLength=150.000000,JumpDistanceFromEdge=10.000000,JumpMaxDepth=150.000000,JumpHeight=50.000000,JumpEndsHeightTolerance=80.000000,SamplingSeparationFactor=1.000000,FilterDistanceThreshold=80.000000,LinkBuilderFlags=1,AreaClass=None,LinkProxyClass=None,LinkProxyId=(Id=0))
+
+[/Script/NavigationSystem.NavigationSystemV1]
+CrowdManagerClass=None
+
+[/Script/Engine.WorldPartitionSettings]
+bNewMapsEnableWorldPartitionStreaming=False
 
