--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -126,6 +126,7 @@ bSkipMovies=True
 +DirectoriesToNeverCook=(Path="/Engine/EngineDamageTypes")
 +DirectoriesToNeverCook=(Path="/MeshModelingToolset")
 +DirectoriesToNeverCook=(Path="/Engine/EditorMaterials/Camera")
++DirectoriesToNeverCook=(Path="/Engine/Splash")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
