Basic android build support
- fixed broken sound effect (caused compilation errors)
- fixed FileNodes to disallow browsing on android
- filled android config vars
- added android as supported project target

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -196,6 +196,8 @@ r.HairStrands.LODMode=False
 r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=False
 r.Material.DefaultAutoMaterialUsage=False
 
+
+
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
@@ -254,17 +256,17 @@ MaximumConcurrentStreams=4
 BlueprintComponentDataCookingMethod=AllBlueprints
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.YourCompany.[PROJECT]
+PackageName=yt.dsh.[PROJECT]
 StoreVersion=1
 StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
-ApplicationDisplayName=
-VersionDisplayName=1.0
+ApplicationDisplayName=PiozaLauncher
+VersionDisplayName=0.7.3
 MinSDKVersion=26
-TargetSDKVersion=28
-InstallLocation=InternalOnly
+TargetSDKVersion=34
+InstallLocation=Auto
 bEnableLint=False
-bPackageDataInsideApk=False
+bPackageDataInsideApk=True
 bCreateAllPlatformsInstall=False
 bDisableVerifyOBBOnStartUp=False
 bForceSmallOBBFiles=False
@@ -272,7 +274,7 @@ bAllowLargeOBBFiles=False
 bAllowPatchOBBFile=False
 bAllowOverflowOBBFiles=False
 bDontBundleLibrariesInAPK=False
-bUseExternalFilesDir=False
+bUseExternalFilesDir=True
 bPublicLogFiles=True
 Orientation=SensorLandscape
 MaxAspectRatio=2.100000
@@ -298,15 +300,14 @@ ExtraActivitySettings=
 +ExtraPermissions=android.permission.READ_MEDIA_AUDIO
 +ExtraPermissions=android.permission.READ_MEDIA_VIDEO
 +ExtraPermissions=android.permission.READ_MEDIA_IMAGES
-+ExtraPermissions=android.permission.RECORD_AUDIO
 bAndroidVoiceEnabled=False
 bRecordPermissionAtStartupEnabled=False
 bEnableMulticastSupport=False
 bPackageForMetaQuest=False
 bRemoveOSIG=False
-KeyStore=
-KeyAlias=
-KeyStorePassword=
+KeyStore=PiozaLauncher.keystore
+KeyAlias=PiozaKey
+KeyStorePassword=4f6YzKAU%nX2bz
 KeyPassword=
 DebugKeyStore=
 DebugKeyAlias=
@@ -315,10 +316,10 @@ DebugKeyPassword=
 bBuildForArm64=True
 bBuildForX8664=False
 bBuildForES31=True
-bSupportsVulkan=True
+bSupportsVulkan=False
 bSupportsVulkanSM5=False
 DebugVulkanLayerDirectory=(Path="")
-bAndroidOpenGLSupportsBackbufferSampling=False
+bAndroidOpenGLSupportsBackbufferSampling=True
 bDetectVulkanByDefault=True
 bBuildWithHiddenSymbolVisibility=True
 bDisableStackProtector=False
@@ -348,15 +349,15 @@ AudioCallbackBufferFrameSize=1024
 AudioNumBuffersToEnqueue=4
 AudioMaxChannels=0
 AudioNumSourceWorkers=0
-SpatializationPlugin=
-SourceDataOverridePlugin=
-ReverbPlugin=
-OcclusionPlugin=
+SpatializationPlugin=Built-in Spatialization
+SourceDataOverridePlugin=None
+ReverbPlugin=Built-in Reverb
+OcclusionPlugin=Built-in Occlusion
 CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
 CacheSizeKB=65536
 MaxChunkSizeOverrideKB=0
-bResampleForDevice=False
-SoundCueCookQualityIndex=-1
+bResampleForDevice=True
+SoundCueCookQualityIndex=0
 MaxSampleRate=48000.000000
 HighSampleRate=32000.000000
 MedSampleRate=24000.000000
