--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -17,11 +17,11 @@ LicensingTerms=Affero General Public License version 3
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Shipping
+BuildConfiguration=PPBC_Development
 BuildTarget=PiozaGameLauncher
 FullRebuild=True
-ForDistribution=True
-IncludeDebugFiles=False
+ForDistribution=False
+IncludeDebugFiles=True
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
