--- a/PiozaGameLauncher.uproject
+++ b/PiozaGameLauncher.uproject
@@ -671,6 +671,20 @@
 		{
 			"Name": "PropertyAccessNode",
 			"Enabled": false
+		},
+		{
+			"Name": "AndroidBackgroundService",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Android"
+			]
+		},
+		{
+			"Name": "AndroidFetchBackgroundDownload",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Android"
+			]
 		}
 	],
 	"TargetPlatforms": [
