Improved android apk install pipeline
- improved error handling
- now works in shipping build
- moved Build.cs to Source folder
- optimized android rendering settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -45,7 +45,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 r.Mobile.ShadingPath=0
 r.Mobile.AllowDeferredShadingOpenGL=False
 r.Mobile.SupportGPUScene=False
-r.Mobile.AntiAliasing=1
+r.Mobile.AntiAliasing=0
 r.Mobile.FloatPrecisionMode=0
 r.Mobile.AllowDitheredLODTransition=False
 r.Mobile.VirtualTextures=False
@@ -165,7 +165,7 @@ r.SkinCache.DefaultBehavior=1
 r.SkinCache.SceneMemoryLimitInMB=128.000000
 r.Mobile.EnableStaticAndCSMShadowReceivers=False
 r.Mobile.EnableMovableLightCSMShaderCulling=False
-r.Mobile.Forward.EnableLocalLights=True
+r.Mobile.Forward.EnableLocalLights=0
 r.Mobile.Forward.EnableClusteredReflections=False
 r.Mobile.EnableNoPrecomputedLightingCSMShader=False
 r.Mobile.AllowDistanceFieldShadows=False
