--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -17,10 +17,10 @@ LicensingTerms=Affero General Public License version 3
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=PiozaGameLauncher
 FullRebuild=True
-ForDistribution=False
+ForDistribution=True
 IncludeDebugFiles=True
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
