Improvements for android
- Non-android options in LauncherOptions are not hidden
- Re-enabled crash reporter
- Changed name on android to Pioza Launcher (Previously PiozaLauncher)
- Tweaked android build settings to package universal .apk
- Bumped NDK and SDK version
- Enabled IoStore and Binary config for faster loading and smaller package size

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -263,11 +263,11 @@ PackageName=yt.dsh.[PROJECT]
 StoreVersion=1
 StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
-ApplicationDisplayName=PiozaLauncher
+ApplicationDisplayName=Pioza Launcher
 VersionDisplayName=0.7.3
-MinSDKVersion=26
+MinSDKVersion=28
 TargetSDKVersion=34
-InstallLocation=Auto
+InstallLocation=InternalOnly
 bEnableLint=False
 bPackageDataInsideApk=True
 bCreateAllPlatformsInstall=False
@@ -286,12 +286,12 @@ bAllowResizing=False
 bSupportSizeChanges=False
 bRestoreNotificationsOnReboot=False
 bFullScreen=False
-bEnableNewKeyboard=True
+bEnableNewKeyboard=False
 DepthBufferPreference=Default
 bValidateTextureFormats=True
-bForceCompressNativeLibs=False
+bForceCompressNativeLibs=True
 bEnableAdvancedBinaryCompression=True
-bEnableBundle=False
+bEnableBundle=True
 bEnableUniversalAPK=True
 bBundleABISplit=True
 bBundleLanguageSplit=True
@@ -319,7 +319,7 @@ DebugKeyAlias=
 DebugKeyStorePassword=
 DebugKeyPassword=
 bBuildForArm64=True
-bBuildForX8664=False
+bBuildForX8664=True
 bBuildForES31=True
 bSupportsVulkan=False
 bSupportsVulkanSM5=False
@@ -330,7 +330,7 @@ bBuildWithHiddenSymbolVisibility=False
 bDisableStackProtector=False
 bDisableLibCppSharedDependencyValidation=False
 bSaveSymbols=False
-bStripShaderReflection=False
+bStripShaderReflection=True
 bEnableGooglePlaySupport=False
 RequestCodeForPlayGamesActivities=80002
 PlayGamesClientId=
@@ -379,9 +379,9 @@ bMultiTargetFormat_ASTC=True
 TextureFormatPriority_ETC2=0.200000
 TextureFormatPriority_DXT=0.600000
 TextureFormatPriority_ASTC=0.900000
-SDKAPILevelOverride=
-NDKAPILevelOverride=
-BuildToolsOverride=
+SDKAPILevelOverride=matchndk
+NDKAPILevelOverride=android-29
+BuildToolsOverride=latest
 bStreamLandscapeMeshLODs=False
 bEnableDomStorage=False
 
