--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -26,9 +26,9 @@ BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
-bUseIoStore=False
+bUseIoStore=True
 bUseZenStore=False
-bMakeBinaryConfig=False
+bMakeBinaryConfig=True
 bGenerateChunks=True
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
@@ -57,7 +57,7 @@ bShareMaterialShaderCode=True
 bDeterministicShaderCodeOrder=False
 bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
-IncludeCrashReporter=False
+IncludeCrashReporter=True
 InternationalizationPreset=All
 -CulturesToStage=en
 +CulturesToStage=en
