Improved ui readability on Android

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -205,6 +205,8 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 bAuthorizeAutomaticWidgetVariableCreation=False
 FontDPIPreset=Unreal
 FontDPI=72
+bAllowHighDPIInGameMode=True
+bEnableDistanceFieldFontRasterization=True
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/PiozaGameLauncher")
