--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,11 +9,11 @@ CompanyDistinguishedName=DashoGames
 Homepage="https://github.com/Shieldowskyy/PiozaLauncher"
 SupportContact=shieldowskyy@protonmail.com
 bUseBorderlessWindow=False
-ProjectVersion=0.7.3
+ProjectVersion=0.8.0
 CopyrightNotice=Created by Shieldziak for DashoGames <3
 Description=An open source game launcher for Dasho Games titles and more!
 ProjectName=PiozaLauncher
-LicensingTerms=Affero General Public License version 3
+LicensingTerms=MIT License
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
