AllowedSoftwareRendering and Fixed Structs
- also disabled FlacElectraDecoder to fix builds on Windows

--- a/PiozaGameLauncher.uproject
+++ b/PiozaGameLauncher.uproject
@@ -7,7 +7,7 @@
 		{
 			"Name": "PiozaGameLauncher",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
+			"LoadingPhase": "PostConfigInit",
 			"AdditionalDependencies": [
 				"Engine"
 			]
@@ -690,10 +690,6 @@
 		},
 		{
 			"Name": "ElectraPlayer",
-			"Enabled": true
-		},
-		{
-			"Name": "FlacDecoderElectra",
 			"Enabled": true
 		},
 		{
