Refactor widget traversal and update Android provider config
Refactored GetAllChildrenRecursive to use GetAllChildrenOfClassRecursive for improved code reuse and maintainability. Updated Android FileProvider authorities in DefaultEngine.ini to use ${applicationId} for better flexibility. Removed a Polish comment from PiozaGameLauncher.cpp for code clarity.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -334,7 +334,7 @@ bEnableUniversalAPK=True
 bBundleABISplit=True
 bBundleLanguageSplit=True
 bBundleDensitySplit=True
-ExtraApplicationSettings=<provider\n    android:name="androidx.core.content.FileProvider"\n    android:authorities="yt.dsh.PiozaGameLauncher.fileprovider"\n    android:exported="false"\n    android:grantUriPermissions="true">\n    <meta-data\n        android:name="android.support.FILE_PROVIDER_PATHS"\n        android:resource="@xml/filepaths"/>\n</provider>
+ExtraApplicationSettings=<provider\n    android:name="androidx.core.content.FileProvider"\n    android:authorities="${applicationId}.fileprovider"\n    android:exported="false"\n    android:grantUriPermissions="true">\n    <meta-data\n        android:name="android.support.FILE_PROVIDER_PATHS"\n        android:resource="@xml/filepaths"/>\n</provider>
 ExtraActivitySettings=
 +ExtraPermissions=android.permission.QUERY_ALL_PACKAGES
 +ExtraPermissions=android.permission.REQUEST_INSTALL_PACKAGES
