--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,6 +12,7 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
 -D3D12TargetedShaderFormats=PCD3D_SM5
 -D3D11TargetedShaderFormats=PCD3D_SM5
 +D3D11TargetedShaderFormats=PCD3D_SM5
++D3D11TargetedShaderFormats=PCD3D_ES31
 Compiler=Default
 AudioSampleRate=48000
 AudioCallbackBufferFrameSize=1024
@@ -285,6 +286,9 @@ s.AsyncLoadingUseFullTimeLimit=True
 [/Script/Engine.GarbageCollectionSettings]
 gc.MultithreadedDestructionEnabled=False
 gc.AssetClustreringEnabled=True
+gc.ActorClusteringEnabled=True
+gc.FlushStreamingOnGC=True
+gc.TimeBetweenPurgingPendingKillObjects=10.000000
 
 [/Script/Engine.AudioSettings]
 DefaultBaseSoundMix=/Game/Media/SFX_MIX.SFX_MIX
