--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -429,6 +429,7 @@ SourceDataOverridePlugin=None
 ReverbPlugin=Built-in Reverb
 OcclusionPlugin=Built-in Occlusion
 SoundCueCookQualityIndex=0
+-TargetedRHIs=SF_VULKAN_SM6
 -TargetedRHIs=SF_VULKAN_SM5
 +TargetedRHIs=SF_VULKAN_SM5
 +TargetedRHIs=SF_VULKAN_ES31
