feat: added basic minimize-to-tray support
- copied icons to Content/Icons for system tray icon
- added console command "hidetotray" to test invoking from bp
- implemented C++ code to support new features

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -131,6 +131,7 @@ bSkipMovies=True
 +DirectoriesToNeverCook=(Path="/Engine/MapTemplates")
 +DirectoriesToNeverCook=(Path="/Engine/OpenWorldTemplate")
 +DirectoriesToNeverCook=(Path="/Engine/StarterContent")
++DirectoriesToAlwaysStageAsNonUFS=(Path="Icons")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
