Improved GC config

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -280,15 +280,19 @@ bDefaultUserConsentGiven=True
 
 [/Script/Engine.StreamingSettings]
 s.UseBackgroundLevelStreaming=False
-s.AsyncLoadingThreadEnabled=False
+s.AsyncLoadingThreadEnabled=True
 s.AsyncLoadingUseFullTimeLimit=True
+s.AsyncLoadingTimeLimit=15.000000
+s.TimeLimitExceededMultiplier=2.000000
 
 [/Script/Engine.GarbageCollectionSettings]
 gc.MultithreadedDestructionEnabled=False
 gc.AssetClustreringEnabled=True
 gc.ActorClusteringEnabled=True
-gc.FlushStreamingOnGC=True
-gc.TimeBetweenPurgingPendingKillObjects=10.000000
+gc.FlushStreamingOnGC=False
+gc.TimeBetweenPurgingPendingKillObjects=60.000000
+gc.NumRetriesBeforeForcingGC=120
+gc.GarbageEliminationEnabled=False
 
 [/Script/Engine.AudioSettings]
 DefaultBaseSoundMix=/Game/Media/SFX_MIX.SFX_MIX
