--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ CompanyDistinguishedName=DashoGames
 Homepage="https://github.com/Shieldowskyy/PiozaLauncher"
 SupportContact=shieldowskyy@protonmail.com
 bUseBorderlessWindow=False
-ProjectVersion=0.8.0 BETA1
+ProjectVersion=0.8.0 RC1
 CopyrightNotice=Created by Shieldziak for DashoGames <3
 Description=An open source game launcher for Dasho Games titles and more!
 ProjectName=PiozaLauncher
